--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -138,7 +138,7 @@
   "errorUserName": "Please enter your name",
   "userRole": "Role",
   "errorRole": "Please select a role",
-  "userPhoneNumber": "Phone Number",
+  "userPhoneNumber": "Phone Number *",
   "passwordPolicy": "Password do not meet requirements:\n\n\u2022 Must contain at least 8 characters\n\u2022 Must contain one special symbol (#, &, % etc)\n\u2022 Must contain one number (0-9)",
   "successMessageUser": "User has been Created Successfully",
   "successMessageCurrency": "Currency Rate has been updated Successfully",
